[gd_scene load_steps=3 format=3 uid="uid://cmua3382xhtn0"]

[ext_resource type="Script" path="res://SaveLoad.gd" id="1_e40fe"]
[ext_resource type="Script" path="res://line_edit.gd" id="2_q4pmk"]

[node name="SaveLoad" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_e40fe")

[node name="LineEdit" type="LineEdit" parent="." groups=["SaveLoad"]]
layout_mode = 0
offset_right = 67.0625
offset_bottom = 31.0
script = ExtResource("2_q4pmk")

[node name="SpinBox" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 92.0
offset_top = 1.0
offset_right = 175.063
offset_bottom = 32.0

[node name="Save" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Save"

[node name="Load" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Delete" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Delete" to="." method="_on_delete_pressed"]
